비대칭키를 이용한 암호화

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,8 +71,8 @@ spring:
           predicates:
             - Path=/order-service/**
 
-token:
-  secret: user_token
+#token:
+#  secret: user_token
 
 management:
   endpoints:
